# MoneyPrinter

./: .gitignore  pyproject.toml
src/: main.py
src/classes/: Tts.py
src/moneyprinter_riley.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
