[project]
name = "moneyprinter-riley"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.86.0",
]

[project.optional-dependencies]
core = [
  "openai>=1.17.0",     # o3 model access
  "typer[all]>=0.12.3",
  "tweepy>=4.14.0",     # X/Twitter API v2 helper
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "schedule>=1.2",
  "clickhouse-connect>=0.7",
  
]
