[project]
name = "moneyprinter-riley"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect>=0.8.17",
    "g4f>=0.5.4.2",
    "moviepy>=2.2.1",
    "numpy>=2.3.0",
    "openai>=1.86.0",
    "prettytable>=3.16.0",
    "pydantic>=2.11.6",
    "python-dotenv>=1.1.0",
    "schedule>=1.2.2",
    "selenium>=4.32.0",
    "selenium-firefox>=2.0.8",
    "termcolor>=3.1.0",
    "tweepy>=4.15.0",
    "webdriver-manager>=4.0.2",
    "wheel>=0.45.1",
]

[project.optional-dependencies]
core = [
  "openai>=1.17.0",     # o3 model access
  "typer[all]>=0.12.3",
  "tweepy>=4.14.0",     # X/Twitter API v2 helper
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "schedule>=1.2",
  "clickhouse-connect>=0.7",
  
]
