[build-system]
# uv reads this but any PEP 517 backend works fine
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "moneyprinter-riley"
version         = "0.1.0"
description     = "Automated tweet drafting, review, and scheduling tool (forked from MoneyPrinter V2)."
authors         = [{ name = "Amanda DeLuca", email = "amanda@example.com" }]
license         = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    # ─── Core functionality ───
    "openai>=1.17.0", # GPT-o3 calls
    "tweepy>=4.15.0", # X/Twitter API v2 helper
    "schedule>=1.2.2", # cron-style job runner
    "typer[all]>=0.12.3", # CLI wrapper (rich + click)
    "clickhouse-connect>=0.8.17",
    "python-dotenv>=1.1.0",
    # ─── Data / ML utils ───
    "numpy>=2.3.0", # modern line (works with Py-3.12)
    "scikit-learn>=1.5.0", # requires NumPy ≥ 2
    "pydantic>=2.7",
    # ─── Media & selenium helpers (used by MoneyPrinter modules) ───
    "moviepy>=2.2.1",
    "selenium>=4.32.0",
    "webdriver-manager>=4.0.2",
    "undetected-chromedriver>=3.5.5",
    # ─── Misc Utils ───
    "prettytable>=3.16.0",
    "platformdirs>=4.3.0",
    "yagmail>=0.15.293",
    "termcolor>=3.1.0",
    "srt-equalizer>=0.1.10",
    "g4f>=0.5.5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "black>=24.4.2",
    "ruff>=0.4.4",
    "uv>=0.1.43"
]

[project.scripts]
# `moneyprinter` CLI invokes Typer app defined in src/main.py
moneyprinter = "src.main:app"

[tool.typer]
pretty_exceptions_show_locals = true

# ─────────────────────────────────────────────────────────────
#  If you **do** want the audio voice-over feature later:
#  1. Downgrade NumPy & scikit-learn:
#       numpy = ">=1.24,<2.0"
#       scikit-learn = ">=1.4,<1.5"
#  2. Add the line below
#       TTS = "~=0.22.0"
#  3. Re-enable the imports in `src/main.py` and `src/classes/TwitterVideo.py`
#     (currently commented out to avoid ModuleNotFoundError)
# ─────────────────────────────────────────────────────────────
